fix(outlinks): add flex-wrap to buttons

--- a/public/_assets/css/style.scss
+++ b/public/_assets/css/style.scss
@@ -390,6 +390,8 @@ abbr {
     display: flex;
 
     flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0.5rem;
 
     width: 100%;
 
